--- a/WaterControl/Windows/MainWindow.xaml
+++ b/WaterControl/Windows/MainWindow.xaml
@@ -23,21 +23,21 @@
             <Setter Property="FontWeight" Value="SemiBold" />
         </Style>
     </Window.Resources>
-    
-    
+
+
     <materialDesign:DialogHost CloseOnClickAway="True" x:Name="mainWindowDialogHost"
                                OverlayBackground="#A3000000"
                                Identifier="mainWindowDialogHost"
                                DialogBackground="Transparent">
-    <!--Dialog Content start-->
+        <!--Dialog Content start-->
         <materialDesign:DialogHost.DialogContent>
             <Frame Name="dialogHostFrame"
                    Source="#"
                    Background="Transparent"
                    NavigationUIVisibility="Hidden" />
         </materialDesign:DialogHost.DialogContent>
-    <!--Dialog Content end-->
-    <!--Main content start-->
+        <!--Dialog Content end-->
+        <!--Main content start-->
         <DockPanel>
             <!--Footer start-->
             <Grid Height="70" Background="#F0F0F0" DockPanel.Dock="Bottom">
@@ -142,7 +142,7 @@
                                     <ColumnDefinition Width="3*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                
+
                                 <ToggleButton Grid.Column="0"
                                     x:Name="ToggleButton"
                                     Click="ToggleButton_Click"
@@ -211,7 +211,6 @@
                                         </Style>
                                     </Style.Resources>
                                 </Style>
-
                             </Grid.Resources>
                             <Border Background="#B3E5FC" 
                                 CornerRadius="0 20 20 0" x:Name="MenuPanel" Padding="15,30,15,30" Margin="3,0,5,0" >
@@ -289,15 +288,76 @@
                                 </StackPanel>
                             </Border>
                         </Grid>
-                        <Frame Width="1880" Margin="20, 0" Grid.Column="1" NavigationUIVisibility="Hidden" Name="mainWindowMiddleContent"  />
-                        <Frame Width="1880" Margin="20, 0" Grid.Column="1" NavigationUIVisibility="Hidden" Name="ipCamContent" Visibility="Hidden"  />
+                        <Canvas Grid.Column="1" Name="Layer_1" Canvas.Left="0" Canvas.Top="0" Width="919" Height="659">
+                            <Canvas.Resources/>
+                            <Canvas Name="Слой_3">
+                                <Canvas Name="Андижанская_область">
+                                    <Path Stroke="#FFFF" Name="ulugnorskiyrayon" Fill="#2196F3" Data="M142.2 331.9l-7.1 3.4c-7.1 3.4-11.2 0-11.2 0l-5.6 3.8l8.2 11.2l-6.8 8.6l-7.5-5.6    L102.1 369l6.7 9c0 0-6.8 24-6.7 35.2s2.6 39 2.6 39l-2.6 5.7l-13-14.7l-19-9.5L52.3 415l-20.2-11.2c0 0-20 2.7-21.2 2.7    s-24.5-17-24.5-17L-25.4 373l-11.5-2.2l-11.7 14.5c1.8 13.3 2.2 26.7 1 40l7.5 18l-14.8 5.2l-21.5 26.2c-13.8-41.2-25-49-25-49    l-8-23.2c0 0-9.5-12.2-10.2-12.5l-25.3-9c3.5-3.3 7.2-6.4 11-9.3c3.5-2.3 38.7-14.7 38.7-14.7s-4.8-18-9.3-28    c-3.2-6.5-7.8-12.1-13.5-16.5c0 0 9.8-5.2 15-8.2s19-13.2 19-13.2l-7.5-5.7l11.5-8.8l12.8-1c0 0 12.2-12.8 14.7-14.8    c2.5-2 42.8-16.5 47.5-21.5s7-16 7-16l10.5-1l7.3 5.6l6-1.8l7.2-12.3L44 211l4.8 11c0 0 10.1 1.1 11.6 7.9s1.9 14.6 6 18.4    s21 13.1 22.1 16.9s-3.8 27.4-2.2 31.9s7.5 15 13.1 12.8s13.1-6.4 15.4-3.4s-6 6.4 0 8.6s13.5 6.4 16.1 6.4s10.1-3 11.2 0    S142.2 331.9 142.2 331.9z"/>
+                                    <Path Stroke="#FFFF" Name="balikchinskiyrayon" Fill="#2196F3" Data="M411.8 273.4l2.2 4.1c-15.4 1.5-14.6 4.9-19.1 8s-9.4-0.1-15.8 3.3    s-15 1.1-24.8 1.1s-10.1 0.4-15 3.8s-13.9 3.8-21 1.1s-7.1-8.6-7.9-14.3s-7.9-6.3-11.6-5.5s-6 1.9-8.2-3.4    c-2.2-5.3-8.6-5.2-13.9-7.1s-10.9 1.5-16.1 3c-5.2 1.5-15.4 0-15.4 0l-11.2 10.1c-9.9-13-19.9-3-25.9 3s0 16.5 0 16.5    c-12.4 1.5-16.9 15.4-24.4 22.5s-18 5.6-18 5.6l-23.6 6.8c0 0 1.1-7.5 0-10.5s-8.6 0-11.2 0s-10.1-4.1-16.1-6.4s2.2-5.6 0-8.6    s-9.8 1.1-15.4 3.4s-11.6-8.2-13.1-12.8s3.4-28.1 2.2-31.9s-18-13.1-22.1-16.9s-4.5-11.6-6-18.4S48.8 222 48.8 222L44 211l20.1-5    c0 0 2.7 5.8 7.2 5s0-7.5 10.8-11.2c4-2.5 15.2-2 15.2-2l10-9h20.5l14.7-2.5c0 0 7 2.5 10 3.5c3 1 11.5-1.2 11.5-1.2    s8.2 5.2 12.5 7.7s13.5 1.3 13.5 1.3l9 15l22-1l8.5 6.3l5.5-2.8l11.2 0.8l6.5 9l7.2 1.8l9.3-7l18.3 1.3l1.7 10.5l18 2l5.2-12.8    l9-4l8.1 17.9v10.5c0 0 9.8 3.8 12.4 8.2s3.8 10.5 4.9 10.5s20.2 7.9 28.9 5.2c5-1.5 9.6-4 13.5-7.5l17.6-0.4l7.1 6L411.8 273.4z"/>
+                                    <Path Stroke="#FFFF" Name="bozskiyrayon" Fill="#2196F3" Data="M238.6 455.6l-5 46.9c-4.8-1-39-9.5-39-9.5s-8 6.2-15.8 7.5c-7.7 1.3-33-7-33-7    l-16.5-17.2l-17.2-7l-10-11.3l2.6-5.7c0 0-2.6-27.8-2.6-39s6.7-35.2 6.7-35.2l-6.7-9l10.1-15.8l7.5 5.6l6.8-8.6l-8.2-11.2l5.6-3.8    c0 0 4.1 3.4 11.2 0l7.1-3.4l23.6-6.8l9 10.5l14.2 3.4l25.5 38.6l16.1 2.2c0 0-1.1 18-4.5 22.9s-13.1 10.9-13.1 10.9    s-3.4 10.9 1.9 13.1c3.1 1.3 6.4 2 9.8 1.9C224.7 428.6 235.2 437.6 238.6 455.6z"/>
+                                    <Path Stroke="#FFFF" Name="shahrihanskiyrayon" Fill="#2196F3" Data="M358.6 460.1c-1.5 3-27.8 3-27.8 3c-5.1 4.6-10.9 8.2-17.2 10.9    c-10.1 4.1-24 9.4-24 9.4l-4.2 24.4l-15.5-3.8c-6.2 2-12.7 3.1-19.2 3.5c-11.5 0.8-12.3-4-17-5l5-46.9c-3.4-18-13.9-27-13.9-27    c-3.3 0.1-6.7-0.5-9.8-1.9c-5.2-2.2-1.9-13.1-1.9-13.1s9.8-6 13.1-10.9s4.5-22.9 4.5-22.9l-16.1-2.2L189.1 339l-14.2-3.4l-9-10.5    c0 0 10.5 1.5 18-5.6s12-21 24.4-22.5c7.1-1 14.3 1 19.9 5.6l6.8-2.2c0 0 12.8-17.2 20.6-14.6c7.9 2.6 8.6 24 8.6 24    s7.9 3.8 9.8 9s6.4 27.8 6.4 27.8s10.1 15 16.5 13.1s9-13.1 13.9-12.8s10.1 9.4 14.6 7.9c9.8-1.5 8.2-12.8 12-12    s5.3 10.9 21.8 15.4c-3.6 4.9-6.5 10.3-8.7 16.1c-3.4 9.8 3.8 39.6 3.8 39.6l-7.1 10.7h-13.5l-0.4 10.5c2.8 0.3 5.6 0.9 8.2 1.9    c2.8 1.2 5.3 3.2 7.1 5.6c0 0 6.8-2.2 12.4 0S360.1 457.1 358.6 460.1z"/>
+                                    <Path Stroke="#FFFF" Name="izbaskanskiyrayon" Fill="#2196F3" Data="M557.3 172.1c1.1 7.5 1.1 13.5-3.8 17.2s-16.5 3.4-18.8 12c-1.4 4.9-1.4 10.2 0 15.1    c-4.5 3.9-9.4 2.1-15.4 1.8s-7.1 2.6-13.9 8.6s-10.1 3.8-17.2 7.1s-3.8 6.4-7.9 11.6s-9.4 3.4-14.2 5.6s-6.8 12.4-6.8 12.4    l-12.4 7.9l-13.5 2.3l-6.8 3.7h-12.8l-2.2-4.1l2.2-6.4l-7.1-6l-17.6 0.4c-3.9 3.5-8.5 6-13.5 7.5c-8.6 2.6-27.8-5.2-28.9-5.2    s-2.2-6-4.9-10.5c-2.6-4.5-12.4-8.2-12.4-8.2v-10.5l-8.1-17.9l-4.1-9.8V190l19.6-1.3V180l4.5-11.7l6.5-3.3v-8l3.5-9.5l7-4.2    c1.3-2 2.5-4.1 3.5-6.3c1-2.5-5-8-5-8v-6.3l14.7-3l14.5-7l6.8-10.3c13.8 1.5 20-4 30.3-10s33.2-12.5 37.5-14.2    c0.6-0.3 1.2-0.5 1.7-0.9L458.3 90c0 0 3.1 6.4 2.1 7.5c-1 1.1-4.7 25.9-4.7 25.9l28.5 15.4l7.5 9.8c0 0-4.5 15.4 0 18    c10.9 4.5 23.2-8.6 23.2-8.6s23.6 1.5 29.2-1.5l6.4-6.8l8.6 6.8C559.2 156.4 556.2 164.6 557.3 172.1z"/>
+                                    <Path Stroke="#FFFF" Name="asakinskiyrayon" Fill="#2196F3" Data="M514.8 474c-5.1 0.1-9.4 0.6-11.9 0.8c-7.1 0.8-22.9 13.5-22.9 13.5l-32.6-2.6    c0 0-15 18-21.8 20.2s-16.9-5.7-16.9-5.7l-7.9 2.2v9.8l-3.8 1.9l-8.2-4.9h-8.1l-5.7 13.5l15.4 16.9l2.2 8.2l-11.9 13.9    c-7.6-3.1-16.2-2.7-23.5 1l-12-12c0 0-6.5 2.5-11.2 2.2c-4.7-0.2-14.8-9.8-14.8-9.8l-7.7-17.2l-8.8 7.2h-12l-4.2-12.8l-1.2-12.8    l4.2-24.4c0 0 13.9-5.2 24-9.4c6.3-2.6 12.1-6.3 17.2-10.9c0 0 26.2 0 27.8-3s7.9-15.4 2.2-17.6s-12.4 0-12.4 0    c-1.9-2.5-4.3-4.4-7.1-5.6c-2.7-0.9-5.4-1.6-8.2-1.9l0.4-10.5h13.5l7.1-10.7c0 0-7.1-29.8-3.8-39.6c2.2-5.7 5.1-11.1 8.7-16.1    c3.6-5 7.4-9 10.1-9.8c5.2-1.5 21.8 2.6 28.9-3c0.8 4.3 4 7.6 8.2 8.6c7.1 1.5 17.6-4.5 28.5 0.8s22.5 18.4 22.5 18.4    c5.4 7 8.3 15.6 8.4 24.4c0.3 15-9.9 21-9.9 21l1.5 6h7.1c0 0 5 7.8 5 8.7s-1.7 15.3 0.3 16s20.4-12.8 20.4-12.8    s-1.2-9.4 3.4-13.8l0.1-0.1c2.4 2.7 5.2 6.5 4.6 9.3c-1 5-1.3 18-1.1 24.4c0 0-9.3 8.6-3.6 12.6c5.7 4 11.5 0 11.5 0l8.5-0.5    L514.8 474z"/>
+                                    <Path Stroke="#FFFF" Name="bulakbashinskiyrayon" Fill="#2196F3" Data="M676.9 514.9c1.1 6 5.6 8.6 5.2 12.8c-0.1 4.3-3.7 7.6-8 7.5c0 0-0.1 0-0.1 0    c-5 0-5.4 3.8-5 7.9s1.9 6.4-4.5 6s-9.8-15-18.8-12.8c-5.8 1.5-11.6 3.3-17.2 5.5c-1.6-0.9-3.2-1.5-5-1.7c-4.3-1.8-15.5 4-15.5 4    s-4.5-5.5-14.5-17c-10-11.5-17-28-17-28s-21.2-20.5-31-20.5c-9.1-4.2-21.3-4.8-30.7-4.6l-1.5-5.4l-8.5 0.5c0 0-5.7 4-11.5 0    c-5.7-4 3.6-12.6 3.6-12.6c-0.1-6.4 0.1-19.4 1.1-24.4c0.6-2.9-2.2-6.6-4.6-9.3c0.8-0.8 1.8-1.3 2.9-1.7c8-2.5 20.5 1.5 20.5 1.5    s8-11 12.3-10c3.2 0.9 6.3 2.2 9.1 3.9c-0.2 2.1-0.2 4.2 0 6.3c2.2 26.5 29.2 15.3 29.2 15.3l7.9-5.2l9.5 1.9l-2.4 5.7l-8.6 7.9    l30.6 15.9c0 0 16.6-5.2 24.1 0s9 10.1 17.6 13.5s25.1 7.9 25.1 7.9l2.7 5.2c0 0-8 3-4.6 5.6c9.8 4.5 11.6-6 16.1-3.4    s3 7.5 0 10.5S675.8 508.9 676.9 514.9z"/>
+                                    <Path Stroke="#FFFF" Name="marhamatskiyrayon" Fill="#2196F3" Data="M554.8 668c0 0 7.3 18.8 3.3 25.8c-4 7-9.8 1-19 0c-9.3-1-19-8-22.7-11.7    s-31-30.3-34.8-31s-15.5 4.8-15.5 4.8l-7.3-5c0 0-8-12.8-10.5-13.5c-2.5-0.8-12.2 0-16.7 0s-5.8-7.2-5.8-7.2s5.8-17 5.8-20.7    s-8.5-7.8-8.5-7.8c-19.2 3.3-20.7 1.2-27.5 0c-4.9-0.7-9.9-0.7-14.8 0v-39.8l11.9-13.9l-2.2-8.2l-15.4-16.9l5.7-13.5h8.1l8.2 4.9    l3.8-1.9v-9.8l7.9-2.2c0 0 10.1 7.9 16.9 5.6s21.8-20.2 21.8-20.2l32.6 2.6c0 0 15.8-12.8 22.9-13.5s28.5-2.7 42.6 3.8    c-5-0.3-14.8 6.3-15.8 6.3h-16.3c0 0-6.5 4.5-5.7 10.2c0.8 5.7 16.2 5.2 20.7 10.2c4.6 5.5 8.1 11.8 10.5 18.5    c2 5.7 24.8 7.2 26 18.2c1.3 11-9.5 15-9.5 15h-13.5l-5.7 3.5l-2.5 8l2.2 7.5l9.8-0.8c2.2-1.5 4.9-2 7.5-1.5l5.2 7.5    c-0.1 6.3 0.2 12.5 1 18.8c1.2 8.7 10 13.2 10 13.2l3.8 12.8L554.8 668z"/>
+                                    <Path Stroke="#FFFF" Name="pahtaabadskiyrayon" Fill="#2196F3" Data="M674.1 213.5c-4 5.8-4.2 8.9-17.7 8.9s-19.9-9.8-25.9-13.6s-20.6-4.8-45.8-7.4    s-26.6 3-36 10.1s-13.9 5-13.9 5c-1.4-4.9-1.4-10.2 0-15.1c2.2-8.6 13.9-8.2 18.8-12s4.9-9.8 3.8-17.2s1.9-15.8 1.9-15.8l-8.6-6.8    l-6.4 6.8c-5.6 3-29.2 1.5-29.2 1.5s-12.4 13.1-23.2 8.6c-4.5-2.6 0-18 0-18l-7.5-9.8l-28.5-15.4c0 0 3.8-24.8 4.7-25.9    c1-1.1-2.1-7.5-2.1-7.5l4.2-12.6c4-2.4 8.8-7.4 14.1-11.1c6-4.3 10.5-9.5 16.5-17s12.5-8.5 16-8.2c3.5 0.2 7.8 2.5 14.8 5.2    c7 2.7 15.5 6.5 19.2 9.8s5 4.3 11.7 4.3s7.8 0 13.8 4s10.2 3.5 18.8 2.5c8.5-1 22.5 3.3 27.5 7.5c5 4.2 4.8 16.2 3.3 26    s-9.3 19.5-12 25.5c-2.7 6-0.8 10.3 2.7 11c3.5 0.8 6.8-12 6.8-12l9-2.5c0 0 6.5 2.2 10 6s15.8 20.7 20 29    c4.2 8.2 13 19.8 16.7 24.3S672.6 208.7 674.1 213.5z"/>
+                                    <Path Stroke="#FFFF" Name="kurgantepinskiyrayon" Fill="#2196F3" Data="M1076.6 306.7c-5.2 6.8-32.5 16.2-32.5 16.2l-20.7 8.5l-27.8 2.7    c0 0-6.5 10.8-11.2 16c-4.7 5.2-45.3 26.2-45.3 26.2l-8 0.5l-0.5 5.2l-14.7 2.8c0 0-20.7 12.2-22.2 13.7    c-10.8 14.5-23.2 16.5-31.5 19c-8.2 2.5-24 0.8-24 0.8l-15.5 1.2c0 0-10.2-0.9-14.7 1.8s-5.2 7.9-8.6 8.6s-6-4.1-9-1.9    s-15.4 10.1-19.9 13.5s-23.2 14.6-23.2 14.6s-8.6-17.2-12-23.6s-14.5-15-14.5-15s2.1-13.5 13.4-18.4s24-10.5 28.9-14.2    s8.7-7.1 8.7-7.1h13v-3.8c0 0-5.2-4.5-4.1-10.1s12.4-11.6 13.5-15.8s3-10.9 3-10.9s-9-10.9-3-27.8s30.8-9.4 30.8-9.4l2.2-6    l-3.4-7.1c0 0 9.8-19.5 1.5-22.1s-19.5 7.9-33.8 7.5s-33.8-7.9-33.8-7.9l-12.8 1.5l-88.5-34.9v-9c13.5 0 13.8-3.1 17.7-8.9    c1.5 4.8 30 14 30 14l48.5 20.5c3.4-1.7 7-3 10.7-3.8c5-0.8 29.5 5.2 29.5 5.2s10.2-5 20.7-8.7s11.8 1.8 18 2    c6.2 0.2 23.8-4.5 35.2-8.7c11.5-4.2 23.2 4.2 27 8s19 22.8 22 26.6s3.5 12.8 6.8 17c3.3 4.2 21.5 5 21.5 5l11.2-3.8l2.2-5    c0 0 5.2-2.5 9.5-5c4.3-2.5 7.7-8.7 7.7-8.7l11-0.5l5-3.5v-6.5l-12-8.5l-5.2-8l5.2-21l6.3-6.5h5.7l0.8 4.8l17 20.2l13 2.5    c0 0 14.3 13.5 19 13.5c4.8 0 15.2-8.8 15.2-8.8s23.8-5 31.5 8S1081.8 300 1076.6 306.7z"/>
+                                    <Path Stroke="#FFFF" Name="djalakudukskiyrayon" Fill="#2196F3" Data="M793.9 309.7c-6 16.9 3 27.8 3 27.8s-1.9 6.8-3 10.9s-12.4 10.1-13.5 15.8    s4.1 10.1 4.1 10.1v3.8h-13c0 0-3.9 3.4-8.7 7.1s-17.6 9.4-28.9 14.2s-13.4 18.4-13.4 18.4s11.1 8.6 14.5 15s12 23.6 12 23.6    s18.8-11.2 23.2-14.6s16.9-11.2 19.9-13.5s5.6 2.6 9 1.9s4.1-6 8.6-8.6s14.7-1.8 14.7-1.8l-6.2 7.5l2.2 11l6.2 7.2l-0.5 6.8    l-11.7 9.5v49.4c0 0-11.5-13.1-19.8-17.2s-12-1.9-18.4-8.2s-28.9-14.2-28.9-14.2l-6.8-2.2v-5.2c0 0-14.6-13.5-18.8-22.1    s-7.5-20.2-27.8-25.1s-19.9 0.4-28.5-6.8c0 0 1.9-14.2-5.6-21s-18.4-12-26.6-14.6l-3-9.8l4.1-3c9.4 4.5 18.8 6.8 21 3.4    s-7.1-9.4-7.1-9.4l-2.2-5.6l10.1-18.4l-8.6-2.6l2.2-14.2l8.4-7.1l15.2-4.5v-21.4l-13.1-9l-17.2-13.1c0 0 4.9-14.6 5.6-18.8    s9.4-9.4 9.4-9.4l88.5 34.9l12.8-1.5c0 0 19.5 7.5 33.8 7.9c14.2 0.4 25.5-10.1 33.8-7.5s-1.5 22.1-1.5 22.1l3.4 7.1l-2.2 6    C824.7 300.4 799.9 292.9 793.9 309.7z"/>
+                                    <Path Stroke="#FFFF" Name="hodjaabadskiyrayon" Fill="#2196F3" Data="M812.6 511.1v19.4l-9.8 3l-8.8-5l-16.2-17l-23-4.8l-4.8 6.8l-2.5 11.8l-14.5 13.2    c0 0-3.8 22.5-3.8 23.7c0 1.2-11.8 18-11.8 18l-14.2 1.5L678.8 563l-24 0.3c0 0-7.5-5.2-11.7-7.8c-3.5-2-7.8-10.1-14.5-13.8    c5.6-2.2 11.4-4 17.2-5.5c9-2.2 12.4 12.4 18.8 12.8s4.9-1.9 4.5-6s0-7.9 5-7.9c4.3 0.2 7.9-3.1 8.1-7.4c0 0 0-0.1 0-0.1    c0.4-4.1-4.1-6.8-5.2-12.8s5.6-8.2 8.6-11.2s4.5-7.9 0-10.5s-6.4 7.9-16.1 3.4c-3.4-2.6 4.6-5.6 4.6-5.6l-2.7-5.2    c0 0-16.5-4.5-25.1-7.9s-10.1-8.2-17.6-13.5s-24.1 0-24.1 0l-30.6-15.9l8.6-7.9l2.4-5.7l-9.5-1.9l-7.9 5.2c0 0-27 11.2-29.2-15.3    c-0.2-2.1-0.2-4.2 0-6.3c1.9-21.4 24-27.3 28.9-28.3c5.2-1.1 8.2-8.2 8.2-8.2s4.1-2.6 12.8-3.9s24 1.7 24 1.7    c6.8-2.2 19.5-3.4 19.5-3.4c8.2 2.6 19.1 7.9 26.6 14.6s5.6 21 5.6 21c8.6 7.1 8.2 1.9 28.5 6.8s23.6 16.5 27.8 25.1    s18.8 22.1 18.8 22.1v5.2l6.8 2.2c0 0 22.5 7.9 28.9 14.2s10.1 4.1 18.4 8.2S812.6 511.1 812.6 511.1z"/>
+                                    <Path Stroke="#FFFF" Name="altinkulskiyrayon" Fill="#2196F3" Data="M457.2 373.1c0 0-11.6-13.1-22.5-18.4s-21.4 0.8-28.5-0.8c-4.2-1-7.5-4.4-8.2-8.6    c-7.1 5.6-23.6 1.5-28.9 3c-2.6 0.8-6.4 4.8-10.1 9.8c-16.5-4.5-18.1-14.7-21.8-15.4s-2.2 10.5-12 12c-4.5 1.5-9.8-7.5-14.6-7.9    s-7.5 10.9-13.9 12.8s-16.5-13.1-16.5-13.1s-4.5-22.5-6.4-27.8s-9.8-9-9.8-9s-0.8-21.4-8.6-24c-7.9-2.6-20.6 14.6-20.6 14.6    l-6.8 2.2c-5.5-4.6-12.8-6.6-19.9-5.6c0 0-6-10.5 0-16.5s16-16 25.9-3l11.2-10.1c0 0 10.1 1.5 15.4 0c5.2-1.5 10.9-4.9 16.1-3    s11.6 1.8 13.9 7.1c2.2 5.3 4.5 4.2 8.2 3.4s10.9-0.2 11.6 5.5s0.8 11.7 7.9 14.3s16.1 2.2 21-1.1s5.2-3.8 15-3.8    s18.4 2.2 24.8-1.1s11.2-0.2 15.8-3.3s3.8-6.5 19.1-8h12.8l6.8-3.8l13.5-2.3l12.4-7.8v18.8c0 0 9 5.2 9 6.8s-5.6 20.2 0 24.8    s18-3.8 21 6.8S482.7 357 457.2 373.1z"/>
+                                    <Path Stroke="#FFFF" Name="andijanskiyrayon" Fill="#2196F3" Data="M671.7 281.6V303l-15.2 4.5l-8.4 7.1l-2.2 14.2l8.6 2.6l-10.1 18.4l2.2 5.6    c0 0 9.4 6 7.1 9.4s-11.6 1.1-21-3.4l-4.1 3l3 9.8c0 0-12.8 1.1-19.5 3.4c0 0-15.4-3-24-1.7s-12.8 3.9-12.8 3.9s-3 7.1-8.2 8.2    c-4.8 1-27 6.9-28.9 28.3c-2.9-1.7-5.9-3-9.1-3.9c-4.3-1-12.3 10-12.3 10s-12.5-4-20.5-1.5c-1.1 0.3-2.1 0.9-3 1.7    c-4.6 4.3-3.4 13.8-3.4 13.8s-18.4 13.5-20.4 12.8s-0.3-15-0.3-16c0-1-4.9-8.7-4.9-8.7h-7.1l-1.5-6c0 0 10.1-6 9.9-21    c-0.1-8.8-3-17.4-8.4-24.4c25.5-16.1 35.2-42 32.2-52.5s-15.4-2.2-21-6.8s0-23.2 0-24.8s-9-6.8-9-6.8v-18.8c0 0 1.9-10.1 6.8-12.4    s10.1-0.4 14.2-5.6s0.8-8.2 7.9-11.6s10.5-1.1 17.2-7.1s7.9-9 13.9-8.6s10.9 2.1 15.4-1.8c0 0 4.5 2.1 13.9-5s10.9-12.8 36-10.1    s39.8 3.5 45.8 7.4s12.4 13.6 25.9 13.6v9c0 0-8.6 5.2-9.4 9.4s-5.6 18.8-5.6 18.8l17.2 13.1L671.7 281.6z"/>
+                                </Canvas>
+                                <TextBlock Foreground="White" FontSize="18" Name="text208" Canvas.Left="854" Canvas.Top="317">Қўрғонтепа</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text210" Canvas.Left="679" Canvas.Top="317">Жалақудуқ</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text212" Canvas.Left="489" Canvas.Top="278">Андижон тумани</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text214" Canvas.Left="606" Canvas.Top="421">Хўжаобод</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text216" Canvas.Left="558" Canvas.Top="470" RenderTransformOrigin="0.5,0.5">
+                                    <TextBlock.RenderTransform>
+                                        <TransformGroup>
+                                            <ScaleTransform/>
+                                            <SkewTransform/>
+                                            <RotateTransform Angle="24.804"/>
+                                            <TranslateTransform/>
+                                        </TransformGroup>
+                                    </TextBlock.RenderTransform>Булоқбоши</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text218" Canvas.Left="431" Canvas.Top="551">Марҳамат</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text220" Canvas.Left="386" Canvas.Top="428">Асака</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text222" Canvas.Left="250" Canvas.Top="380">Шаҳрихон</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text224" Canvas.Left="143" Canvas.Top="399">Бўстон</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text226" Canvas.Left="-12" Canvas.Top="317">Улуғнор</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text228" Canvas.Left="143" Canvas.Top="233">Балиқчи</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text230" Canvas.Left="320" Canvas.Top="297">Олтинкўл</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text232" Canvas.Left="370" Canvas.Top="167">Избоскан</TextBlock>
+                                <TextBlock Foreground="White" FontSize="18" Name="text234" Canvas.Left="501" Canvas.Top="100">Пахтаобод</TextBlock>
+                            </Canvas>
+                            <Canvas>
+                                <Button Style="{StaticResource MaterialDesignRaisedButton}"
+                        Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
+                        materialDesign:ButtonAssist.CornerRadius="20"
+                        Height="25" IsDefault="True" Background="White"
+                        Width="25" BorderThickness="0" Name="polmonWaterDamm" Click="polmonWaterDamm_Click"
+                        materialDesign:ShadowAssist.ShadowDepth="Depth0" RenderTransformOrigin="6.58,4.341" Canvas.Left="450" Canvas.Top="610"
+                    >
+                                </Button>
+                                <Button Canvas.Bottom="30" Canvas.Left="510" Style="{StaticResource MaterialDesignRaisedButton}"
+                        Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
+                        materialDesign:ButtonAssist.CornerRadius="20"
+                        Height="26" IsDefault="True" Background="White"
+                        Width="24" BorderThickness="0" Name="kampirqalaWaterDamm" Click="kampirqalaWaterDamm_Click" 
+                        materialDesign:ShadowAssist.ShadowDepth="Depth0" RenderTransformOrigin="23.34,24.021" HorizontalAlignment="Left" Canvas.Top="636" VerticalAlignment="Top"
+                    >
+                                </Button>
+                            </Canvas>
+                        </Canvas>
+                        <Frame Visibility="Hidden" Width="1880" Margin="20, 0" Grid.Column="1" NavigationUIVisibility="Hidden" Name="mainWindowMiddleContent"  />
+                        <Frame  Width="1880" Margin="20, 0" Grid.Column="1" NavigationUIVisibility="Hidden" Name="ipCamContent" Visibility="Hidden"  />
                     </Grid>
                 </Grid>
             </Border>
             <!--Page content end-->
         </DockPanel>
-    <!--Main content end-->
-        
+        <!--Main content end-->
+
     </materialDesign:DialogHost>
 </Window>
 
