--- a/WaterControl/Windows/MainWindow.xaml
+++ b/WaterControl/Windows/MainWindow.xaml
@@ -137,6 +137,7 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="2*"/>
+                                    <ColumnDefinition Width="2*"/>
                                     <ColumnDefinition Width="15*"/>
                                     <ColumnDefinition Width="9*"/>
                                     <ColumnDefinition Width="3*"/>
@@ -153,8 +154,20 @@
                                      FontSize="20" HorizontalAlignment="Left">
                                     Menu
                                 </TextBlock>
-                                <TextBlock Grid.Column="2" x:Name="waterdDammName" Text="Хўжаобод Гидроузели" FontSize="35" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="SemiBold"/>
-                                <Border Grid.Column="3" Margin="5" CornerRadius="5">
+                                <Button Height="70" Grid.Column="2" Visibility="Hidden" BorderThickness="0" Background="{x:Null}" Click="backtocard_Click" Name="backtocard" IsEnabled="{Binding DownButton}">
+                                    <Path Width="40" Height="60" Stretch="Fill" Fill="#979797" Data="M30 18L40 18L20 36L-7.86805e-07 18L10 18L10 -1.31134e-06L30 -4.37114e-07L30 18Z" RenderTransformOrigin="0.5,0.5">
+                                        <Path.RenderTransform>
+                                            <TransformGroup>
+                                                <ScaleTransform/>
+                                                <SkewTransform/>
+                                                <RotateTransform Angle="90.516"/>
+                                                <TranslateTransform/>
+                                            </TransformGroup>
+                                        </Path.RenderTransform>
+                                    </Path>
+                                </Button>
+                                <TextBlock Grid.Column="3" x:Name="waterdDammName" Text="Андижон Вилояти" FontSize="35" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="SemiBold"/>
+                                <Border Grid.Column="4" Margin="5" CornerRadius="5">
                                     <Grid Margin="10 0">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*" />
@@ -176,8 +189,8 @@
                                         <TextBlock Text="Ҳарорат :" Grid.Column="2" Grid.Row="1" FontSize="18"/>
                                     </Grid>
                                 </Border>
-                                <TextBlock Grid.Column="4" x:Name="userName" Text="Бузруков Жавоҳир " FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                                <materialDesign:PopupBox  Grid.Column="5"
+                                <TextBlock Grid.Column="5" x:Name="userName" Text="Бузруков Жавоҳир " FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                                <materialDesign:PopupBox  Grid.Column="6"
                                      DockPanel.Dock="Right"
                                      PlacementMode="BottomAndAlignRightEdges">
                                     <ListBox>
@@ -225,7 +238,7 @@
                                         </Button.Effect>
                                         Интерфейс созламалари
                                     </Button>
-                                    <!--<Button HorizontalAlignment="Left" Width="315" Name="btnOpenAddGateDialog" Click="btnOpenAddGateDialog_Click">
+                                    <Button HorizontalAlignment="Left" Width="315" Name="btnOpenAddGateDialog">
                                         <Button.Effect>
                                             <DropShadowEffect>
                                                 <DropShadowEffect.BlurRadius>10</DropShadowEffect.BlurRadius>
@@ -235,7 +248,7 @@
                                         </Button.Effect>
                                         Янги дарвоза яратиш
                                     </Button>
-                                    <Button HorizontalAlignment="Left" Width="315" Name="btnOpenGateSettingsDialog" Click="btnOpenGateSettingsDialog_Click">
+                                    <Button HorizontalAlignment="Left" Width="315" Name="btnOpenGateSettingsDialog" >
                                         <Button.Effect>
                                             <DropShadowEffect>
                                                 <DropShadowEffect.BlurRadius>10</DropShadowEffect.BlurRadius>
@@ -245,7 +258,7 @@
                                         </Button.Effect>
                                         Дарвозани созлаш
                                     </Button>
-                                    <Button VerticalAlignment="Center" HorizontalAlignment="Left" Width="315" Name="btnOpenLicenseDialog" Click="btnOpenLicenseDialog_Click">
+                                    <Button VerticalAlignment="Center" HorizontalAlignment="Left" Width="315" Name="btnOpenLicenseDialog">
                                         <Button.Effect>
                                             <DropShadowEffect>
                                                 <DropShadowEffect.BlurRadius>10</DropShadowEffect.BlurRadius>
@@ -255,7 +268,7 @@
                                         </Button.Effect>
                                         Лицензия
                                     </Button>
-                                    <Button x:Name="btnAddUser" Click="btnAddUser_Click" HorizontalAlignment="Left" Width="315">
+                                    <Button x:Name="btnAddUser" HorizontalAlignment="Left" Width="315">
                                         <Button.Effect>
                                             <DropShadowEffect>
                                                 <DropShadowEffect.BlurRadius>10</DropShadowEffect.BlurRadius>
@@ -265,7 +278,7 @@
                                         </Button.Effect>
                                         Фойдаланувчи қўшиш
                                     </Button>
-                                    <Button x:Name="btnOpenLoginSmartWaterDialog" Click="btnOpenLoginSmartWaterDialog_Click" HorizontalAlignment="Left" Width="315">
+                                    <Button x:Name="btnOpenLoginSmartWaterDialog" HorizontalAlignment="Left" Width="315">
                                         <Button.Effect>
                                             <DropShadowEffect>
                                                 <DropShadowEffect.BlurRadius>10</DropShadowEffect.BlurRadius>
@@ -275,7 +288,7 @@
                                         </Button.Effect>
                                         Connect SmartWater
                                     </Button>
-                                    <Button x:Name="btnSaveDatabase" Click="btnSaveDatabase_Click" HorizontalAlignment="Left" Width="315">
+                                    <Button x:Name="btnSaveDatabase" HorizontalAlignment="Left" Width="315">
                                         <Button.Effect>
                                             <DropShadowEffect>
                                                 <DropShadowEffect.BlurRadius>10</DropShadowEffect.BlurRadius>
@@ -284,12 +297,22 @@
                                             </DropShadowEffect>
                                         </Button.Effect>
                                         Базани сақлаш
-                                    </Button>-->
+                                    </Button>
                                 </StackPanel>
                             </Border>
                         </Grid>
                         <Canvas Grid.Column="1" Name="RegionCard" Canvas.Left="0" Canvas.Top="0" Width="919" Height="659">
                             <Canvas.Resources/>
+                            <Canvas>
+                                <TextBlock Text="Вилоят Бўйича қўйилган лимит : " FontSize="20" Canvas.Left="-478" Canvas.Top="570" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                                <Border  Width="200" Height="25" Background="#2196F3" CornerRadius="0,10,10,0" Canvas.Left="-478" Canvas.Top="602" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                                <TextBlock Text=" / 38 млн m.kub" FontSize="20" Canvas.Left="-265" Canvas.Top="599" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                <TextBlock Text="Ҳозирда сарфланга сув :" FontSize="20" Canvas.Left="-478" Canvas.Top="640"/>
+                                <Border  Width="284" Height="25" Background="Red" CornerRadius="0,10,10,0" Canvas.Left="-478" Canvas.Top="672" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <TextBlock Text=" / 49 млн m.kub" FontSize="20" Canvas.Left="-187" Canvas.Top="667" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+
+                                <Border/>
+                            </Canvas>
                             <Canvas Name="Слой_3">
                                 <Canvas Name="Андижанская_область">
                                     <Path Stroke="#FFFF" Name="ulugnorskiyrayon" Fill="#2196F3" Data="M142.2 331.9l-7.1 3.4c-7.1 3.4-11.2 0-11.2 0l-5.6 3.8l8.2 11.2l-6.8 8.6l-7.5-5.6    L102.1 369l6.7 9c0 0-6.8 24-6.7 35.2s2.6 39 2.6 39l-2.6 5.7l-13-14.7l-19-9.5L52.3 415l-20.2-11.2c0 0-20 2.7-21.2 2.7    s-24.5-17-24.5-17L-25.4 373l-11.5-2.2l-11.7 14.5c1.8 13.3 2.2 26.7 1 40l7.5 18l-14.8 5.2l-21.5 26.2c-13.8-41.2-25-49-25-49    l-8-23.2c0 0-9.5-12.2-10.2-12.5l-25.3-9c3.5-3.3 7.2-6.4 11-9.3c3.5-2.3 38.7-14.7 38.7-14.7s-4.8-18-9.3-28    c-3.2-6.5-7.8-12.1-13.5-16.5c0 0 9.8-5.2 15-8.2s19-13.2 19-13.2l-7.5-5.7l11.5-8.8l12.8-1c0 0 12.2-12.8 14.7-14.8    c2.5-2 42.8-16.5 47.5-21.5s7-16 7-16l10.5-1l7.3 5.6l6-1.8l7.2-12.3L44 211l4.8 11c0 0 10.1 1.1 11.6 7.9s1.9 14.6 6 18.4    s21 13.1 22.1 16.9s-3.8 27.4-2.2 31.9s7.5 15 13.1 12.8s13.1-6.4 15.4-3.4s-6 6.4 0 8.6s13.5 6.4 16.1 6.4s10.1-3 11.2 0    S142.2 331.9 142.2 331.9z"/>
@@ -331,6 +354,33 @@
                                 <TextBlock Foreground="White" FontSize="18" Name="text234" Canvas.Left="501" Canvas.Top="100">Пахтаобод</TextBlock>
                             </Canvas>
                             <Canvas>
+                                <Border materialDesign:ShadowAssist.ShadowDepth="Depth0" 
+                                        RenderTransformOrigin="6.58,4.341" CornerRadius="20" Height="26" 
+                                        Background="White" Width="25" Canvas.Left="705" Canvas.Top="472"/>
+                                <Border materialDesign:ShadowAssist.ShadowDepth="Depth0" 
+                                        RenderTransformOrigin="6.58,4.341" CornerRadius="20" Height="25" 
+                                        Background="White" Width="25" Canvas.Left="124" Canvas.Top="203"/>
+                                <Border materialDesign:ShadowAssist.ShadowDepth="Depth0" 
+                                        RenderTransformOrigin="6.58,4.341" CornerRadius="20" Height="26" 
+                                        Background="White" Width="25" Canvas.Left="384" Canvas.Top="382"/>
+                                <Border materialDesign:ShadowAssist.ShadowDepth="Depth0" 
+                                        RenderTransformOrigin="6.58,4.341" CornerRadius="20" Height="25" 
+                                        Background="White" Width="25" Canvas.Left="264" Canvas.Top="445"/>
+                                <Border materialDesign:ShadowAssist.ShadowDepth="Depth0" 
+                                        RenderTransformOrigin="6.58,4.341" CornerRadius="20" Height="25" 
+                                        Background="White" Width="25" Canvas.Left="608" Canvas.Top="154"/>
+                                <Border materialDesign:ShadowAssist.ShadowDepth="Depth0" 
+                                        RenderTransformOrigin="6.58,4.341" CornerRadius="20" Height="24" 
+                                        Background="White" Width="25" Canvas.Left="847" Canvas.Top="358"/>
+                                <Border materialDesign:ShadowAssist.ShadowDepth="Depth0" 
+                                        RenderTransformOrigin="6.58,4.341" CornerRadius="20" Height="25" 
+                                        Background="White" Width="26" Canvas.Left="462" Canvas.Top="203"/>
+                                <Border materialDesign:ShadowAssist.ShadowDepth="Depth0" 
+                                        RenderTransformOrigin="6.58,4.341" CornerRadius="20" Height="25" 
+                                        Background="White" Width="25" Canvas.Left="-76" Canvas.Top="307"/>
+                                <Border materialDesign:ShadowAssist.ShadowDepth="Depth0" 
+                                        RenderTransformOrigin="6.58,4.341" CornerRadius="20" Height="25" 
+                                        Background="White" Width="25" Canvas.Left="62" Canvas.Top="370"/>
                                 <Button Style="{StaticResource MaterialDesignRaisedButton}"
                         materialDesign:ButtonAssist.CornerRadius="20"
                         Height="25" IsDefault="True" Background="White"
